grammar/.antlr/CVParser.java
// Generated from /home/miguel/Documentos/Carrera/Cuarto/Procesadores/practica/pr4/cv-parser/grammar/CVParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CVParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LLAVE_ABRE=1, LLAVE_CIERRA=2, PAREN_ABRE=3, PAREN_CIERRA=4, DOS_PUNTOS=5, 
		PUNTO_Y_COMA=6, COMA=7, FLECHA=8, IGUAL=9, GLOBAL_KW=10, CV_KW=11, SECCION_KW=12, 
		PERSONA_KW=13, INFO_PERSONA_KW=14, NOMBRE_KW=15, PUESTO_KW=16, UBICACION_KW=17, 
		EMAIL_KW=18, TELEFONO_KW=19, FECHA_NACIMIMENTO_KW=20, EDAD_KW=21, IMAGEN_DE_PERFIL_KW=22, 
		IMAGEN_DE_FONDO_KW=23, FORMACION_KW=24, OFICIAL_KW=25, COMPLEMENTARIA_KW=26, 
		CENTRO_KW=27, FACULTAD_KW=28, PLAN_DE_ESTUDIOS_KW=29, TITULO_KW=30, HORAS_KW=31, 
		CERTIFICADO_KW=32, AÑO_KW=33, EXPERIENCIA_KW=34, TRABAJO_KW=35, EMPRESA_KW=36, 
		PERIODO_KW=37, JORNADA_KW=38, DESCRIPCION_KW=39, RESPONSABILIDADES_KW=40, 
		LOGROS_KW=41, TECNOLOGIAS_KW=42, HABILIDADES_KW=43, HARD_SKILLS_KW=44, 
		SOFT_SKILLS_KW=45, LENGUAJE_KW=46, ICONO_KW=47, NIVEL_KW=48, HABILIDAD_KW=49, 
		HABILIDAD_TIPO=50, NIVEL_HABILIDAD_TIPO=51, IDIOMA_KW=52, DIALECTO_KW=53, 
		BANDERA_KW=54, NIVEL_IDIOMA_TIPO=55, DIALECTO_TIPO=56, PORTFOLIO_KW=57, 
		PROYECTO_KW=58, URL_DE_IMAGEN_KW=59, TIEMPO_DE_DESARROLLO_KW=60, ROL_KW=61, 
		ESTADO_KW=62, ENLACES_KW=63, ACTUALIDAD_KW=64, ESTADO_TIPO=65, ROL_TIPO=66, 
		TEC_TIPO=67, INICIO_TELEFONO=68, TELEFONO_VALOR=69, EDAD_VALOR=70, AÑO=71, 
		CERTIFICADO_VALOR=72, CORREO=73, URL=74, FECHA=75, TDESARROLLO_VALOR=76, 
		IDENTIFICADOR=77, DIGITOS=78, WS=79, COMENTARIO_LINEA=80, COMENTARIO_BLOQUE=81, 
		CONTENIDO_LINEA=82, FIN_COMENTARIO_LINEA=83, CONTENIDO_BLOQUE=84, FIN_COMENTARIO_BLOQUE=85, 
		CADENA=86, CADENA_CAMBIO=87;
	public static final int
		RULE_cv_grupo = 0, RULE_global = 1, RULE_variable = 2, RULE_cv = 3, RULE_informacion_personal = 4, 
		RULE_persona_decl = 5, RULE_campos_persona = 6, RULE_nombre = 7, RULE_puesto = 8, 
		RULE_ubicacion = 9, RULE_email = 10, RULE_telefono = 11, RULE_fecha_nacimiento = 12, 
		RULE_edad = 13, RULE_imagen_perfil = 14, RULE_imagen_fondo = 15, RULE_enlaces = 16, 
		RULE_formacion = 17, RULE_oficial = 18, RULE_centro = 19, RULE_añofinal = 20, 
		RULE_titulo = 21, RULE_planestudio = 22, RULE_facultad = 23, RULE_complementaria = 24, 
		RULE_horas = 25, RULE_descripcion = 26, RULE_certificado = 27, RULE_experiencia = 28, 
		RULE_experiencias = 29, RULE_experiencia_item = 30, RULE_empresa = 31, 
		RULE_periodo = 32, RULE_rango_fechas = 33, RULE_jornada = 34, RULE_responsabilidades = 35, 
		RULE_logros = 36, RULE_habilidades = 37, RULE_habilidades_campos = 38, 
		RULE_hard_skill = 39, RULE_soft_skill = 40, RULE_habilidad_lista = 41, 
		RULE_lenguaje = 42, RULE_icono = 43, RULE_nivel_habilidad = 44, RULE_habilidad = 45, 
		RULE_idiomas = 46, RULE_idioma = 47, RULE_idioma_campos = 48, RULE_dialecto = 49, 
		RULE_nivel_idioma = 50, RULE_bandera = 51, RULE_portfolio = 52, RULE_bportfolio = 53, 
		RULE_proyecto = 54, RULE_tdesarrollo = 55, RULE_rol = 56, RULE_estado = 57, 
		RULE_tecnologias = 58, RULE_tecnologia = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"cv_grupo", "global", "variable", "cv", "informacion_personal", "persona_decl", 
			"campos_persona", "nombre", "puesto", "ubicacion", "email", "telefono", 
			"fecha_nacimiento", "edad", "imagen_perfil", "imagen_fondo", "enlaces", 
			"formacion", "oficial", "centro", "añofinal", "titulo", "planestudio", 
			"facultad", "complementaria", "horas", "descripcion", "certificado", 
			"experiencia", "experiencias", "experiencia_item", "empresa", "periodo", 
			"rango_fechas", "jornada", "responsabilidades", "logros", "habilidades", 
			"habilidades_campos", "hard_skill", "soft_skill", "habilidad_lista", 
			"lenguaje", "icono", "nivel_habilidad", "habilidad", "idiomas", "idioma", 
			"idioma_campos", "dialecto", "nivel_idioma", "bandera", "portfolio", 
			"bportfolio", "proyecto", "tdesarrollo", "rol", "estado", "tecnologias", 
			"tecnologia"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'('", "')'", "':'", "';'", "','", "'->'", "'='", 
			"'Global'", "'CV'", null, "'Persona'", null, "'Nombre'", "'Puesto'", 
			null, "'Email'", null, "'Fecha_nacimiento'", "'Edad'", "'Imagen_de_perfil'", 
			"'Imagen_de_fondo'", null, "'Oficial'", "'Complementaria'", "'Centro'", 
			"'Facultad'", "'Plan_de_estudios'", null, "'Horas'", "'Certificado'", 
			"'A\\u00F1o'", "'Experiencia'", "'Trabajo'", "'Empresa'", "'Periodo'", 
			"'Jornada'", null, "'Responsabilidades'", "'Logros'", null, "'Habilidades'", 
			"'Hard_skills'", "'Soft_skills'", "'Lenguaje'", "'Icono'", "'Nivel'", 
			"'Habilidad'", null, null, "'Idiomas'", "'Dialecto'", "'Bandera'", null, 
			null, "'Portfolio'", "'Proyecto'", "'Url_de_imagen'", "'Tiempo_de_desarrollo'", 
			"'Rol'", "'Estado'", "'Enlaces'", "'Actualidad'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'//'", 
			"'/*'", null, "'\\n'", null, "'*/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LLAVE_ABRE", "LLAVE_CIERRA", "PAREN_ABRE", "PAREN_CIERRA", "DOS_PUNTOS", 
			"PUNTO_Y_COMA", "COMA", "FLECHA", "IGUAL", "GLOBAL_KW", "CV_KW", "SECCION_KW", 
			"PERSONA_KW", "INFO_PERSONA_KW", "NOMBRE_KW", "PUESTO_KW", "UBICACION_KW", 
			"EMAIL_KW", "TELEFONO_KW", "FECHA_NACIMIMENTO_KW", "EDAD_KW", "IMAGEN_DE_PERFIL_KW", 
			"IMAGEN_DE_FONDO_KW", "FORMACION_KW", "OFICIAL_KW", "COMPLEMENTARIA_KW", 
			"CENTRO_KW", "FACULTAD_KW", "PLAN_DE_ESTUDIOS_KW", "TITULO_KW", "HORAS_KW", 
			"CERTIFICADO_KW", "A\u0001O_KW", "EXPERIENCIA_KW", "TRABAJO_KW", "EMPRESA_KW", 
			"PERIODO_KW", "JORNADA_KW", "DESCRIPCION_KW", "RESPONSABILIDADES_KW", 
			"LOGROS_KW", "TECNOLOGIAS_KW", "HABILIDADES_KW", "HARD_SKILLS_KW", "SOFT_SKILLS_KW", 
			"LENGUAJE_KW", "ICONO_KW", "NIVEL_KW", "HABILIDAD_KW", "HABILIDAD_TIPO", 
			"NIVEL_HABILIDAD_TIPO", "IDIOMA_KW", "DIALECTO_KW", "BANDERA_KW", "NIVEL_IDIOMA_TIPO", 
			"DIALECTO_TIPO", "PORTFOLIO_KW", "PROYECTO_KW", "URL_DE_IMAGEN_KW", "TIEMPO_DE_DESARROLLO_KW", 
			"ROL_KW", "ESTADO_KW", "ENLACES_KW", "ACTUALIDAD_KW", "ESTADO_TIPO", 
			"ROL_TIPO", "TEC_TIPO", "INICIO_TELEFONO", "TELEFONO_VALOR", "EDAD_VALOR", 
			"A\u0001O", "CERTIFICADO_VALOR", "CORREO", "URL", "FECHA", "TDESARROLLO_VALOR", 
			"IDENTIFICADOR", "DIGITOS", "WS", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
			"CONTENIDO_LINEA", "FIN_COMENTARIO_LINEA", "CONTENIDO_BLOQUE", "FIN_COMENTARIO_BLOQUE", 
			"CADENA", "CADENA_CAMBIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CVParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CVParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cv_grupoContext extends ParserRuleContext {
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public List<CvContext> cv() {
			return getRuleContexts(CvContext.class);
		}
		public CvContext cv(int i) {
			return getRuleContext(CvContext.class,i);
		}
		public Cv_grupoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cv_grupo; }
	}

	public final Cv_grupoContext cv_grupo() throws RecognitionException {
		Cv_grupoContext _localctx = new Cv_grupoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cv_grupo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			global();
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121);
				cv();
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CV_KW );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalContext extends ParserRuleContext {
		public TerminalNode GLOBAL_KW() { return getToken(CVParser.GLOBAL_KW, 0); }
		public TerminalNode LLAVE_ABRE() { return getToken(CVParser.LLAVE_ABRE, 0); }
		public TerminalNode LLAVE_CIERRA() { return getToken(CVParser.LLAVE_CIERRA, 0); }
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(GLOBAL_KW);
			setState(127);
			match(LLAVE_ABRE);
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				variable();
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFICADOR );
			setState(133);
			match(LLAVE_CIERRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(CVParser.IDENTIFICADOR, 0); }
		public TerminalNode IGUAL() { return getToken(CVParser.IGUAL, 0); }
		public TerminalNode CADENA() { return getToken(CVParser.CADENA, 0); }
		public TerminalNode PUNTO_Y_COMA() { return getToken(CVParser.PUNTO_Y_COMA, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFICADOR);
			setState(136);
			match(IGUAL);
			setState(137);
			match(CADENA);
			setState(138);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CvContext extends ParserRuleContext {
		public TerminalNode CV_KW() { return getToken(CVParser.CV_KW, 0); }
		public TerminalNode LLAVE_ABRE() { return getToken(CVParser.LLAVE_ABRE, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(CVParser.IDENTIFICADOR, 0); }
		public Informacion_personalContext informacion_personal() {
			return getRuleContext(Informacion_personalContext.class,0);
		}
		public FormacionContext formacion() {
			return getRuleContext(FormacionContext.class,0);
		}
		public HabilidadesContext habilidades() {
			return getRuleContext(HabilidadesContext.class,0);
		}
		public IdiomasContext idiomas() {
			return getRuleContext(IdiomasContext.class,0);
		}
		public TerminalNode LLAVE_CIERRA() { return getToken(CVParser.LLAVE_CIERRA, 0); }
		public ExperienciaContext experiencia() {
			return getRuleContext(ExperienciaContext.class,0);
		}
		public PortfolioContext portfolio() {
			return getRuleContext(PortfolioContext.class,0);
		}
		public CvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cv; }
	}

	public final CvContext cv() throws RecognitionException {
		CvContext _localctx = new CvContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(CV_KW);
			setState(141);
			match(LLAVE_ABRE);
			setState(142);
			match(IDENTIFICADOR);
			setState(143);
			informacion_personal();
			setState(144);
			formacion();
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(145);
				experiencia();
				}
				break;
			}
			setState(148);
			habilidades();
			setState(149);
			idiomas();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SECCION_KW) {
				{
				setState(150);
				portfolio();
				}
			}

			setState(153);
			match(LLAVE_CIERRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Informacion_personalContext extends ParserRuleContext {
		public TerminalNode SECCION_KW() { return getToken(CVParser.SECCION_KW, 0); }
		public TerminalNode PAREN_ABRE() { return getToken(CVParser.PAREN_ABRE, 0); }
		public TerminalNode INFO_PERSONA_KW() { return getToken(CVParser.INFO_PERSONA_KW, 0); }
		public TerminalNode PAREN_CIERRA() { return getToken(CVParser.PAREN_CIERRA, 0); }
		public TerminalNode LLAVE_ABRE() { return getToken(CVParser.LLAVE_ABRE, 0); }
		public Persona_declContext persona_decl() {
			return getRuleContext(Persona_declContext.class,0);
		}
		public TerminalNode LLAVE_CIERRA() { return getToken(CVParser.LLAVE_CIERRA, 0); }
		public EnlacesContext enlaces() {
			return getRuleContext(EnlacesContext.class,0);
		}
		public Imagen_perfilContext imagen_perfil() {
			return getRuleContext(Imagen_perfilContext.class,0);
		}
		public Imagen_fondoContext imagen_fondo() {
			return getRuleContext(Imagen_fondoContext.class,0);
		}
		public Informacion_personalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_informacion_personal; }
	}

	public final Informacion_personalContext informacion_personal() throws RecognitionException {
		Informacion_personalContext _localctx = new Informacion_personalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_informacion_personal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(SECCION_KW);
			setState(156);
			match(PAREN_ABRE);
			setState(157);
			match(INFO_PERSONA_KW);
			setState(158);
			match(PAREN_CIERRA);
			setState(159);
			match(LLAVE_ABRE);
			setState(160);
			persona_decl();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ENLACES_KW) {
				{
				setState(161);
				enlaces();
				}
			}

			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMAGEN_DE_PERFIL_KW) {
				{
				setState(164);
				imagen_perfil();
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMAGEN_DE_FONDO_KW) {
				{
				setState(167);
				imagen_fondo();
				}
			}

			setState(170);
			match(LLAVE_CIERRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Persona_declContext extends ParserRuleContext {
		public TerminalNode PERSONA_KW() { return getToken(CVParser.PERSONA_KW, 0); }
		public TerminalNode PAREN_ABRE() { return getToken(CVParser.PAREN_ABRE, 0); }
		public Campos_personaContext campos_persona() {
			return getRuleContext(Campos_personaContext.class,0);
		}
		public TerminalNode PAREN_CIERRA() { return getToken(CVParser.PAREN_CIERRA, 0); }
		public Persona_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_persona_decl; }
	}

	public final Persona_declContext persona_decl() throws RecognitionException {
		Persona_declContext _localctx = new Persona_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_persona_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(PERSONA_KW);
			setState(173);
			match(PAREN_ABRE);
			setState(174);
			campos_persona();
			setState(175);
			match(PAREN_CIERRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Campos_personaContext extends ParserRuleContext {
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public PuestoContext puesto() {
			return getRuleContext(PuestoContext.class,0);
		}
		public UbicacionContext ubicacion() {
			return getRuleContext(UbicacionContext.class,0);
		}
		public EmailContext email() {
			return getRuleContext(EmailContext.class,0);
		}
		public TelefonoContext telefono() {
			return getRuleContext(TelefonoContext.class,0);
		}
		public Fecha_nacimientoContext fecha_nacimiento() {
			return getRuleContext(Fecha_nacimientoContext.class,0);
		}
		public EdadContext edad() {
			return getRuleContext(EdadContext.class,0);
		}
		public Campos_personaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campos_persona; }
	}

	public final Campos_personaContext campos_persona() throws RecognitionException {
		Campos_personaContext _localctx = new Campos_personaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_campos_persona);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			nombre();
			setState(178);
			puesto();
			setState(179);
			ubicacion();
			setState(180);
			email();
			setState(181);
			telefono();
			setState(184);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FECHA_NACIMIMENTO_KW:
				{
				setState(182);
				fecha_nacimiento();
				}
				break;
			case EDAD_KW:
				{
				setState(183);
				edad();
				}
				break;
			case PAREN_CIERRA:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NombreContext extends ParserRuleContext {
		public TerminalNode NOMBRE_KW() { return getToken(CVParser.NOMBRE_KW, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(CVParser.DOS_PUNTOS, 0); }
		public TerminalNode CADENA() { return getToken(CVParser.CADENA, 0); }
		public TerminalNode PUNTO_Y_COMA() { return getToken(CVParser.PUNTO_Y_COMA, 0); }
		public NombreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre; }
	}

	public final NombreContext nombre() throws RecognitionException {
		NombreContext _localctx = new NombreContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_nombre);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(NOMBRE_KW);
			setState(187);
			match(DOS_PUNTOS);
			setState(188);
			match(CADENA);
			setState(189);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PuestoContext extends ParserRuleContext {
		public TerminalNode PUESTO_KW() { return getToken(CVParser.PUESTO_KW, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(CVParser.DOS_PUNTOS, 0); }
		public TerminalNode CADENA() { return getToken(CVParser.CADENA, 0); }
		public TerminalNode PUNTO_Y_COMA() { return getToken(CVParser.PUNTO_Y_COMA, 0); }
		public PuestoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puesto; }
	}

	public final PuestoContext puesto() throws RecognitionException {
		PuestoContext _localctx = new PuestoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_puesto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(PUESTO_KW);
			setState(192);
			match(DOS_PUNTOS);
			setState(193);
			match(CADENA);
			setState(194);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UbicacionContext extends ParserRuleContext {
		public TerminalNode UBICACION_KW() { return getToken(CVParser.UBICACION_KW, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(CVParser.DOS_PUNTOS, 0); }
		public TerminalNode CADENA() { return getToken(CVParser.CADENA, 0); }
		public TerminalNode PUNTO_Y_COMA() { return getToken(CVParser.PUNTO_Y_COMA, 0); }
		public UbicacionContext(ParserRuleContext parent, int invokingState) {
